add authent (#2)
* add authent

* check sonar

* remove unused args
